// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyPriceFilterViewMapControl renders correctly when collapsed 1`] = `
<div class="layer-container">
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Query listings with current maximum price">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyPriceFilterViewMapControl renders correctly when expanded 1`] = `
<div class="layer-container">
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Query listings with current maximum price">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options expanded">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;
